syntax = "proto3";

import "google/protobuf/struct.proto";

package task;

option go_package = "./task;task";

message Task {
    int32 TaskID = 1;
    string Type = 2;
    google.protobuf.Struct Data = 3;
    int32 Status = 4;
    int32 Step = 5;
}

message TaskRequest {
    Task TaskEntry = 1;
}

message TaskResponse {
    string Result = 1;
}

service TaskService {
    rpc CreateTask(TaskRequest) returns (TaskResponse);
}